feat: json에 common 제작 후 적용 ( confirm, cancel, edit, remove )

--- a/fourtoon-cookie/locales/ko.json
+++ b/fourtoon-cookie/locales/ko.json
@@ -1,4 +1,10 @@
 {
+    "common": {
+        "confirm": "확인",
+        "cancel": "취소",
+        "edit": "수정",
+        "remove": "삭제"
+    },
     "error": {
         "default": "오류가 발생했습니다.",
         "user": "문제가 발생하였습니다. 문제가 지속되면 관리자에게 알려주세요.",
@@ -10,10 +16,6 @@
     "components": {
         "alertModal": {
             "close": "닫기"
-        },
-        "confirmationModal": {
-            "cancel": "취소",
-            "confirm": "확인"
         },
         "errorComponent": {
             "errorRetry": "에러가 발생했습니다. 화면을 클릭하여 다시 시도해주세요."
