--- a/fourtoon-cookie/locales/ko.json
+++ b/fourtoon-cookie/locales/ko.json
@@ -3,7 +3,12 @@
         "confirm": "확인",
         "cancel": "취소",
         "edit": "수정",
-        "remove": "삭제"
+        "remove": "삭제",
+        "done": "완료"
+    },
+    "login": {
+        "loginRequired": "로그인이 필요",
+        "loginRequiredDetail": "로그인이 필요한 서비스입니다. 로그인을 해주세요."
     },
     "error": {
         "default": "오류가 발생했습니다.",
@@ -62,6 +67,14 @@
             },
             "diaryEmpty": {
                 "writeDiary": "일기를 작성해보아요!"
+            }
+        },
+        "diaryWritePage": {
+            "textInputLayout": {
+                "placeholder": "오늘의 일상을 작성해주세요."
+            },
+            "writeDoneButtonlayout": {
+
             }
         }
     }
