feat: pages/IntroPage에 있는 글자 다국어 처리

--- a/fourtoon-cookie/locales/ko.json
+++ b/fourtoon-cookie/locales/ko.json
@@ -76,6 +76,13 @@
             "writeDoneButtonlayout": {
 
             }
+        },
+        "introPage": {
+            "subtitle": "나의 하루를 그림으로 표현해보세요",
+            "login": {
+                "apple": "Apple로 시작하기",
+                "google": "Google로 시작하기"
+            }
         }
     }
 }
