--- a/fourtoon-cookie/locales/ko.json
+++ b/fourtoon-cookie/locales/ko.json
@@ -17,7 +17,7 @@
         "logout": "로그아웃",
         "resign": "회원탈퇴",
         "resignAskTitle": "회원 탈퇴하시겠습니까?",
-        "resignAskDetail": "회원탈퇴 시 모든 데이터가 삭제됩니다. 정말 탈퇴하시겠습니까?",
+        "resignAskDetail": "회원탈퇴 시 모든 데이터가 삭제됩니다. 정말 탈퇴하시겠습니까?"
     },
     "error": {
         "default": "오류가 발생했습니다.",
@@ -75,7 +75,7 @@
                 },
                 "header": {
                     "removeAskTitle": "삭제하시겠습니까?",
-                    "removeAskDetail": "삭제된 일기는 복구할 수 없습니다. 정말 삭제하시겠습니까?",
+                    "removeAskDetail": "삭제된 일기는 복구할 수 없습니다. 정말 삭제하시겠습니까?"
                 }
             },
             "diaryEmpty": {
