feat: api에 있는 글자 다국어 처리

--- a/fourtoon-cookie/locales/ko.json
+++ b/fourtoon-cookie/locales/ko.json
@@ -23,7 +23,25 @@
         "default": "오류가 발생했습니다.",
         "user": "문제가 발생하였습니다. 문제가 지속되면 관리자에게 알려주세요.",
         "server": "서버에서 오류가 발생했습니다. 문제가 지속되면 관리자에게 알려주세요.",
-        "characterNotSelected": "캐릭터가 선택되지 않았습니다. 캐릭터를 선택해주세요."
+        "characterNotSelected": "캐릭터가 선택되지 않았습니다. 캐릭터를 선택해주세요.",
+        "authFailed": "인증에 실패했습니다.",
+        "api": {
+            "character": "캐릭터 정보를 불러오는데 실패했습니다.",
+            "diary": {
+                "get": "일기를 불러오는데 실패했습니다.",
+                "post": "일기를 작성하는데 실패했습니다.",
+                "delete": "일기를 삭제하는데 실패했습니다.",
+                "put": "일기를 수정하는데 실패했습니다.",
+                "patchFavorite": "일기를 즐겨찾기 하는데 실패했습니다.",
+                "getFullImage": "일기의 전체 이미지를 불러오는데 실패했습니다."
+            },
+            "member": {
+                "get": "회원 정보를 불러오는데 실패했습니다.",
+                "post": "회원 정보를 생성하는데 실패했습니다.",
+                "put": "회원 정보를 수정하는데 실패했습니다.",
+                "delete": "회원 정보를 삭제하는데 실패했습니다."
+            }
+        }
     },
     "system": {
         "image": {
