feat: auth에 있는 글자 다국어 처리

--- a/fourtoon-cookie/locales/ko.json
+++ b/fourtoon-cookie/locales/ko.json
@@ -41,6 +41,20 @@
                 "put": "회원 정보를 수정하는데 실패했습니다.",
                 "delete": "회원 정보를 삭제하는데 실패했습니다."
             }
+        },
+        "auth": {
+            "apple": {
+                "failedToGetCredential": "사용자 정보를 가져오는 중 오류가 발생 했습니다. 다시 로그인해 주세요.",
+                "failedToFindAccount": "사용자 정보를 찾을 수 없습니다. 다시 로그인해 주세요.",
+                "unsupportedPlatform": "해당 운영체제는 지원하지 않습니다. IOS 또는 ANDROID로 시도해 주세요."
+            },
+            "google": {
+                "failedToFindAccount": "사용자 정보를 찾을 수 없습니다. 다시 로그인해 주세요."
+            },
+            "supabase": {
+                "login": "로그인 중 오류가 발생했습니다.",
+                "refresh": "로그인 갱신 중 오류가 발생했습니다."
+            }
         }
     },
     "system": {
