fix: 일부 오탈자 수정

--- a/fourtoon-cookie/locales/ko.json
+++ b/fourtoon-cookie/locales/ko.json
@@ -89,7 +89,7 @@
         },
         "diaryTimelinePage": {
             "diaryComponent": {
-                "diaryContetnsLayout": {
+                "diaryContentsLayout": {
                     "briefView": "간단히 보기",
                     "readMore": "자세히 보기"
                 },
