fix: merge 후 추가적인 국제화 진행
970e2b73256081786f4d38f6e41e5a75b42cb7ed
해당 커밋에서 추가된 한국어를 국제화 진행함

--- a/fourtoon-cookie/locales/en.json
+++ b/fourtoon-cookie/locales/en.json
@@ -119,7 +119,7 @@
           "placeholder": "Write about your day here."
         },
         "writeDoneButtonlayout": {
-  
+          "pleaseSelectCharacter": "Please select a character."
         }
       },
       "introPage": {
