--- a/fourtoon-cookie/locales/ko.json
+++ b/fourtoon-cookie/locales/ko.json
@@ -119,7 +119,7 @@
                 "placeholder": "오늘의 일상을 작성해주세요."
             },
             "writeDoneButtonlayout": {
-
+                "pleaseSelectCharacter": "캐릭터를 선택해주세요."
             }
         },
         "introPage": {
