feat: 일기 작성 후 완료 시 successToast 나오도록 기능 추가

--- a/fourtoon-cookie/locales/en.json
+++ b/fourtoon-cookie/locales/en.json
@@ -119,7 +119,8 @@
           "placeholder": "Write about your day here."
         },
         "writeDoneButtonlayout": {
-          "pleaseSelectCharacter": "Please select a character."
+          "pleaseSelectCharacter": "Please select a character.",
+          "diaryCreated": "Diary created 🎉"
         }
       },
       "introPage": {
