--- a/fourtoon-cookie/locales/en.json
+++ b/fourtoon-cookie/locales/en.json
@@ -12,6 +12,7 @@
     "login": {
       "loginRequired": "Login Required",
       "loginRequiredDetail": "This service requires login. Please log in.",
+      "loginSuccess": "Success to login 🎉",
       "login": "Login",
       "signUp": "Sign Up",
       "logout": "Logout",
