--- a/fourtoon-cookie/locales/ko.json
+++ b/fourtoon-cookie/locales/ko.json
@@ -14,6 +14,7 @@
         "loginRequiredDetail": "로그인이 필요한 서비스입니다. 로그인을 해주세요.",
         "loginSuccess": "로그인에 성공했습니다 🎉",
         "signupRequired": "회원가입이 필요합니다",
+        "signupSuccess": "회원가입에 성공했습니다 🎉",
         "login": "로그인",
         "signUp": "회원가입",
         "logout": "로그아웃",
