fix: WriteDoneButtonLayout의 locale json 값 수정

--- a/fourtoon-cookie/locales/en.json
+++ b/fourtoon-cookie/locales/en.json
@@ -118,7 +118,7 @@
         "textInputLayout": {
           "placeholder": "Write about your day here."
         },
-        "writeDoneButtonlayout": {
+        "writeDoneButtonLayout": {
           "pleaseSelectCharacter": "Please select a character."
         }
       },
