--- a/fourtoon-cookie/locales/ko.json
+++ b/fourtoon-cookie/locales/ko.json
@@ -118,7 +118,7 @@
             "textInputLayout": {
                 "placeholder": "오늘의 일상을 작성해주세요."
             },
-            "writeDoneButtonlayout": {
+            "writeDoneButtonLayout": {
                 "pleaseSelectCharacter": "캐릭터를 선택해주세요."
             }
         },
