fix: diaryContentsLayout en.json 철자 오류 수정

--- a/fourtoon-cookie/locales/en.json
+++ b/fourtoon-cookie/locales/en.json
@@ -89,7 +89,7 @@
       },
       "diaryTimelinePage": {
         "diaryComponent": {
-          "diaryContetnsLayout": {
+          "diaryContentsLayout": {
             "briefView": "Brief View",
             "readMore": "Read More"
           },
