[bug] 국제화 오탈자 오류 수정 (#88)

--- a/fourtoon-cookie/locales/en.json
+++ b/fourtoon-cookie/locales/en.json
@@ -89,7 +89,7 @@
       },
       "diaryTimelinePage": {
         "diaryComponent": {
-          "diaryContetnsLayout": {
+          "diaryContentsLayout": {
             "briefView": "Brief View",
             "readMore": "Read More"
           },
@@ -118,7 +118,7 @@
         "textInputLayout": {
           "placeholder": "Write about your day here."
         },
-        "writeDoneButtonlayout": {
+        "writeDoneButtonLayout": {
           "pleaseSelectCharacter": "Please select a character."
         }
       },
