[feat] 사용자의 행동에 따라 Toast 보여주는 로직 추가 (#89)
* feat: react-native-toast-message 패키지 추가

* feat: App.tsx에 Toast 컴포넌트 추가 등록

* feat: toast.ts에 자주 사용할 function 구현

* feat: 일기 작성 후 완료 시 successToast 나오도록 기능 추가

* feat: 로그아웃 혹은 회원탈퇴 진행 시 InfoTeast 나오도록 기능 추가

* feat: IntroPage에서 로그인 성공 이후 SuccessToast 나오도록 기능 추가

* feat: IntroPage에서 로그인 성공 이후 회원가입이 필요할 경우 InfoToast 나오도록 기능 추가

* feat: SignUpPage에서 회원가입 완료 후 성공하는 경우 SuccessToast 나오도록 기능 추가

* feat: Toast 위치를 bottom -> top 으로 수정함

* feat: ErrorBoundary에서 Alert 대신 Toast를 통해 정보를 전달하도록 로직 수정

--- a/fourtoon-cookie/locales/en.json
+++ b/fourtoon-cookie/locales/en.json
@@ -12,6 +12,9 @@
     "login": {
       "loginRequired": "Login Required",
       "loginRequiredDetail": "This service requires login. Please log in.",
+      "loginSuccess": "Success to login 🎉",
+      "signupRequired": "Sign up required",
+      "signupSuccess": "Success to sign up 🎉",
       "login": "Login",
       "signUp": "Sign Up",
       "logout": "Logout",
@@ -118,8 +121,9 @@
         "textInputLayout": {
           "placeholder": "Write about your day here."
         },
-        "writeDoneButtonLayout": {
-          "pleaseSelectCharacter": "Please select a character."
+        "writeDoneButtonlayout": {
+          "pleaseSelectCharacter": "Please select a character.",
+          "diaryCreated": "Diary created 🎉"
         }
       },
       "introPage": {
