fix: 병합하면서 다시 오탈자가 발생한 것 같아서 수정함.

--- a/fourtoon-cookie/locales/ko.json
+++ b/fourtoon-cookie/locales/ko.json
@@ -121,7 +121,7 @@
             "textInputLayout": {
                 "placeholder": "오늘의 일상을 작성해주세요."
             },
-            "writeDoneButtonlayout": {
+            "writeDoneButtonLayout": {
                 "pleaseSelectCharacter": "캐릭터를 선택해주세요.",
                 "diaryCreated": "일기 작성 완료 🎉"
             }
