--- a/fourtoon-cookie/locales/en.json
+++ b/fourtoon-cookie/locales/en.json
@@ -121,7 +121,7 @@
         "textInputLayout": {
           "placeholder": "Write about your day here."
         },
-        "writeDoneButtonlayout": {
+        "writeDoneButtonLayout": {
           "pleaseSelectCharacter": "Please select a character.",
           "diaryCreated": "Diary created 🎉"
         }
