fix: DiaryPaintingImageFailedLayout을 조금 더 사용자 친화적으로 변경

--- a/fourtoon-cookie/locales/en.json
+++ b/fourtoon-cookie/locales/en.json
@@ -97,8 +97,8 @@
             "readMore": "Read More"
           },
           "diaryPaintingImageFailedLayout": {
-            "title": "Failed to create the painting.",
-            "detail": "It seems there was an issue with the content being too abstract or violating ethical standards. Please delete it and try again."
+            "title": "Can't understand the content",
+            "detail": "It seems that your character did not understand the content. Please try again."
           },
           "diaryPaintingImageLoadingLayout": {
             "title": "{{name}} is drawing the painting!",
