--- a/fourtoon-cookie/locales/ko.json
+++ b/fourtoon-cookie/locales/ko.json
@@ -97,8 +97,8 @@
                     "readMore": "자세히 보기"
                 },
                 "diaryPaintingImageFailedLayout": {
-                    "title": "그림을 그리는데 실패했습니다.",
-                    "detail": "내용이 추상적이거나, 비윤리적인 등의 문제가 있는 것 같습니다. 삭제 후 다시 시도해주세요."
+                    "title": "내용을 이해하지 못했어요",
+                    "detail": "캐릭터가 이해하기에는 내용이 너무 어려운 것 같아요. 조금만 더 수정해주시면 안 될까요?"
                 },
                 "diaryPaintingImageLoadingLayout": {
                     "title": "{{name}}(이)가 그림을 그리고 있습니다!",
