fix: DiaryPaintingImageLoadingLayout을 조금 더 사용자 친화적으로 변경

--- a/fourtoon-cookie/locales/en.json
+++ b/fourtoon-cookie/locales/en.json
@@ -102,7 +102,7 @@
           },
           "diaryPaintingImageLoadingLayout": {
             "title": "{{name}} is drawing the painting!",
-            "detail": "Working hard on it. Please wait a little longer!"
+            "detail": "Working hard on it. Please wait!"
           },
           "footer": {
             "imageDownloadSuccess": "Image downloaded successfully.",
