--- a/fourtoon-cookie/locales/ko.json
+++ b/fourtoon-cookie/locales/ko.json
@@ -101,8 +101,8 @@
                     "detail": "캐릭터가 이해하기에는 내용이 너무 어려운 것 같아요. 조금만 더 수정해주시면 안 될까요?"
                 },
                 "diaryPaintingImageLoadingLayout": {
-                    "title": "{{name}}(이)가 그림을 그리고 있습니다!",
-                    "detail": "열심히 작업 중입니다. 조금만 기다려주세요!"
+                    "title": "{{name}}(이)가 그림을 열심히 그리고 있어요!",
+                    "detail": "열심히 그리고 있으니 기다려주세요!!"
                 },
                 "footer": {
                     "imageDownloadSuccess": "이미지가 다운로드 되었습니다.",
