[feat] 일기 생성 요청 이후 로딩 중이나 성공하였을 때의 UI를 사용자 친화적으로 변경 (#93)

--- a/fourtoon-cookie/locales/en.json
+++ b/fourtoon-cookie/locales/en.json
@@ -97,12 +97,12 @@
             "readMore": "Read More"
           },
           "diaryPaintingImageFailedLayout": {
-            "title": "Failed to create the painting.",
-            "detail": "It seems there was an issue with the content being too abstract or violating ethical standards. Please delete it and try again."
+            "title": "Can't understand the content",
+            "detail": "It seems that your character did not understand the content. Please try again."
           },
           "diaryPaintingImageLoadingLayout": {
             "title": "{{name}} is drawing the painting!",
-            "detail": "Working hard on it. Please wait a little longer!"
+            "detail": "Working hard on it. Please wait!"
           },
           "footer": {
             "imageDownloadSuccess": "Image downloaded successfully.",
